# deisa-dask

./: CHANGELOG.md  pyproject.toml  setup.py
.hermes/: plan-issue-95.md
.hermes/plans/: 2026-06-21_95-execute-tasks-on-bridge-graph.md  2026-06-21_95-execute-tasks-on-bridge.md
benchmark/: test_time_to_callback.py
site/: hugo.yaml
site/content/: _index.md
src/deisa/dask/: __version__.py  bridge.py  communicator.py  deisa.py  handshake.py  tracked_array.py
src/deisa_dask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_bridge.py  test_comm.py  test_deisa.py  test_mpi.py  test_per_array_communicator.py  utils.py
